compiler/testData/diagnostics/tests/callableReference/kt34314.fir.kt
// !DIAGNOSTICS: -UNUSED_VARIABLE

fun main() {
    konst x = <!NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER, NEW_INFERENCE_NO_INFORMATION_FOR_PARAMETER!>run<!> { ::run } // no error
}
